components/cattle-system/rancher/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app rancher
  labels:
    app.kubernetes.io/instance: rancher
    app.kubernetes.io/name: rancher
  annotations:
    gethomepage.dev/href: "https://rancher.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/rancher.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["rancher.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: *app
          port: 80
